[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2p = {git = "https://github.com/bonedaddy/i2p-rs.git", rev = "3c0892f3c94275afc9833676493c26d0878ad708"}
env_logger = "0.5"
log = "0.4.6"
anyhow = "1"
tokio = {version = "1.17.0", features = ["full", "rt-multi-thread"]}
clap = "2.33.3"
config = {path = "../config"}
server = {path = "../server"}