[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2p = {git = "https://github.com/bonedaddy/i2p-rs.git", rev = "31518759a89b61ea465905845b3d640d6eaf4d87"}
env_logger = "0.5"
log = "0.4.6"
anyhow = "1"
tokio = {version = "1.17.0", features = ["full", "rt-multi-thread"]}
clap = "2.33.3"
config = {path = "../config"}
rand = "0.8.5"
axum = {version = "0.5.1", features = ["headers", "http2", "ws"]}
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vdf = {path = "../vdf"}
rug = "1.15"
data-encoding = "2.3.2"
ring = "0.16.20"
futures = { version = "0.3.0", features = ["thread-pool"]}
bytes = "1.1.0"