[package]
name = "vdf"
version = "0.1.0"
edition = "2021"
# from https://github.com/eupn/vdf-rs
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.15"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
[dependencies.curv-kzen]
version = "0.8"
default-features = false
features = ["num-bigint"]